--- a/blog-service/src/main/resources/application-dev.yml
+++ b/blog-service/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ spring:
         dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
         format_sql: true
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:103.188.83.154:9092}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -30,7 +30,7 @@ logging:
     com.techhub.app.blogservice: DEBUG
 
 kafka:
-  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:103.188.83.154:9092}
   topics:
     email: ${KAFKA_EMAIL_TOPIC:email-notifications}
   consumer:
