--- a/file-service/src/main/resources/application.yml
+++ b/file-service/src/main/resources/application.yml
@@ -24,9 +24,9 @@ spring:
       max-request-size: 100MB
 
 cloudinary:
-  cloud-name: ${CLOUDINARY_CLOUD_NAME:your_cloud_name}
-  api-key: ${CLOUDINARY_API_KEY:your_api_key}
-  api-secret: ${CLOUDINARY_API_SECRET:your_api_secret}
+  cloud-name: ${CLOUDINARY_CLOUD_NAME:dfghle9yg}
+  api-key: ${CLOUDINARY_API_KEY:826669928256623}
+  api-secret: ${CLOUDINARY_API_SECRET:dHhG1xQSQgAxrbb-Zio2CsQ55bs}
 
 eureka:
   client:
