--- a/compose.yml
+++ b/compose.yml
@@ -1,14 +1,5 @@
 version: '3'
 services:
-  zipkin-container:
-    image: openzipkin/zipkin
-    container_name: zipkin-container
-    ports:
-      - 9411:9411
-    networks:
-      - backend
-    restart: always
-
   service-discovery-container:
     build:
       context: ./service-discovery
@@ -21,8 +12,6 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
       - backend
-    depends_on:
-      - zipkin-container
     restart: always
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8761/actuator/health" ]
@@ -66,6 +55,23 @@ services:
       - backend
     depends_on:
       api-gateway-container:
+        condition: service_healthy
+    restart: always
+
+  user-service-container:
+    build:
+      context: ./user-service
+      dockerfile: Dockerfile
+    image: tuyentvwork/user-service:0.1.0
+    container_name: user-service-container
+    ports:
+      - 8080:8080
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+    networks:
+      - backend
+    depends_on:
+      service-discovery-container:
         condition: service_healthy
     restart: always
 
@@ -134,6 +140,40 @@ services:
       - backend
     depends_on:
       api-gateway-container:
+        condition: service_healthy
+    restart: always
+
+  file-service-container:
+    build:
+      context: ./file-service
+      dockerfile: Dockerfile
+    image: tuyentvwork/file-service:0.1.0
+    container_name: file-service-container
+    ports:
+      - 8086:8086
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+    networks:
+      - backend
+    depends_on:
+      service-discovery-container:
+        condition: service_healthy
+    restart: always
+
+  notification-service-container:
+    build:
+      context: ./notification-service
+      dockerfile: Dockerfile
+    image: tuyentvwork/notification-service:0.1.0
+    container_name: notification-service-container
+    ports:
+      - 8088:8088
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+    networks:
+      - backend
+    depends_on:
+      service-discovery-container:
         condition: service_healthy
     restart: always
 
