feat(vnpay): vnpay base

--- a/dev.env
+++ b/dev.env
@@ -14,3 +14,12 @@ TABLESPACE_LOCATION=/data/postgresql/tablespace_directory
 
 # Mật khẩu mở file keystore (SSL cho Spring Boot nếu có dùng HTTPS)
 KEY_STORE_PASSWORD=123456
+
+#vnpay
+VNPAY_TMN_CODE=0AAX2AOF
+VNPAY_HASH_SECRET=R9NG5FT0OJ944TRXM0UX6LH77TT538B7
+VNPAY_PAYMENT_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://localhost:3000/vnpay-return
+VNPAY_VERSION=2.1.0
+VNPAY_COMMAND=pay
+VNPAY_ORDER_TYPE=other
