--- a/compose.yml
+++ b/compose.yml
@@ -1,20 +1,20 @@
-version: '3'
+version: "3"
 services:
   service-discovery-container:
     build:
       context: ./service-discovery
       dockerfile: Dockerfile
-    image: tuyentvwork/service-discovery:0.1.0
+    image: toandeptroai/service-discovery:0.1.0
     container_name: service-discovery-container
     ports:
       - 8761:8761
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     restart: always
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8761/actuator/health" ]
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -23,20 +23,20 @@ services:
     build:
       context: ./api-gateway
       dockerfile: Dockerfile
-    image: tuyentvwork/api-gateway:0.1.0
+    image: toandeptroai/api-gateway:0.1.0
     container_name: api-gateway-container
     ports:
       - 8443:8443
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       service-discovery-container:
         condition: service_healthy
     restart: always
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8443/actuator/health" ]
+      test: ["CMD", "curl", "-f", "http://localhost:8443/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -45,14 +45,14 @@ services:
     build:
       context: ./proxy-client
       dockerfile: Dockerfile
-    image: tuyentvwork/proxy-client:0.1.0
+    image: toandeptroai/proxy-client:0.1.0
     container_name: proxy-client-container
     ports:
       - 8085:8085
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       api-gateway-container:
         condition: service_healthy
@@ -62,14 +62,14 @@ services:
     build:
       context: ./user-service
       dockerfile: Dockerfile
-    image: tuyentvwork/user-service:0.1.0
+    image: toandeptroai/user-service:0.1.0
     container_name: user-service-container
     ports:
       - 8080:8080
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       service-discovery-container:
         condition: service_healthy
@@ -79,14 +79,14 @@ services:
     build:
       context: ./blog-service
       dockerfile: Dockerfile
-    image: tuyentvwork/blog-service:0.1.0
+    image: toandeptroai/blog-service:0.1.0
     container_name: blog-service-container
     ports:
       - 8081:8081
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       api-gateway-container:
         condition: service_healthy
@@ -96,14 +96,14 @@ services:
     build:
       context: ./course-service
       dockerfile: Dockerfile
-    image: tuyentvwork/course-service:0.1.0
+    image: toandeptroai/course-service:0.1.0
     container_name: course-service-container
     ports:
       - 8082:8082
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       api-gateway-container:
         condition: service_healthy
@@ -113,14 +113,14 @@ services:
     build:
       context: ./learning-path-service
       dockerfile: Dockerfile
-    image: tuyentvwork/learning-path-service:0.1.0
+    image: toandeptroai/learning-path-service:0.1.0
     container_name: learning-path-service-container
     ports:
       - 8083:8083
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       api-gateway-container:
         condition: service_healthy
@@ -130,14 +130,14 @@ services:
     build:
       context: ./payment-service
       dockerfile: Dockerfile
-    image: tuyentvwork/payment-service:0.1.0
+    image: toandeptroai/payment-service:0.1.0
     container_name: payment-service-container
     ports:
       - 8084:8084
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       api-gateway-container:
         condition: service_healthy
@@ -147,14 +147,14 @@ services:
     build:
       context: ./file-service
       dockerfile: Dockerfile
-    image: tuyentvwork/file-service:0.1.0
+    image: toandeptroai/file-service:0.1.0
     container_name: file-service-container
     ports:
       - 8086:8086
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       service-discovery-container:
         condition: service_healthy
@@ -164,18 +164,20 @@ services:
     build:
       context: ./notification-service
       dockerfile: Dockerfile
-    image: tuyentvwork/notification-service:0.1.0
+    image: toandeptroai/notification-service:0.1.0
     container_name: notification-service-container
     ports:
       - 8088:8088
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     networks:
-      - backend
+      - do-an-net
     depends_on:
       service-discovery-container:
         condition: service_healthy
     restart: always
 
 networks:
-  backend:
+  do-an-net:
+    name: do-an-network
+    external: true
