--- a/proxy-client/pom.xml
+++ b/proxy-client/pom.xml
@@ -30,7 +30,11 @@
 			<artifactId>common-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 		<!-- Eureka client -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
