--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,5 +1,5 @@
 # Sử dụng image Java JRE nhẹ
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:11-jre
 
 # Biến truyền vào khi build
 ARG PROJECT_VERSION=0.1.0
@@ -11,13 +11,13 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 # Tạo thư mục ứng dụng
 WORKDIR /home/app
 
-# Copy file JAR vào container (đổi đúng tên jar service-discovery)
-COPY target/service-discovery-0.0.1-SNAPSHOT.jar app.jar
+# Copy file JAR vào container (đổi đúng tên jar user-service)
+COPY target/user-service-v2.5.12.jar app.jar
 
 # Biến môi trường cho Spring profile
 ENV SPRING_PROFILES_ACTIVE=dev
 
-# Expose port (ví dụ service-discovery chạy trên 8080 cho Eureka)
+# Expose port (ví dụ user-service chạy trên 8080 cho Eureka)
 EXPOSE 8080
 
 # Chạy app
