--- a/user-service/compose.yml
+++ b/user-service/compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 services:
-  service-discovery-container:
-    image: tuyentvwork/user-service:0.1.0
+  user-service-container:
+    image: toandeptroai/user-service:0.1.0
     ports:
-      - 8761:8761
+      - 8080:8080
     environment:
       - SPRING_PROFILES_ACTIVE=dev
