--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ src/main/resources/script/dev_log.log.2024-07-09.0.gz
 src/main/resources/script/*
 src/main/resources/script/dev_log.log
 src/main/resources/script/
+
+### Environment Variables ###
+.env
+*.env
+!.env.example
