--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,15 +1,18 @@
 server:
-#  ssl:
-#    key-store: classpath:${ENVIRONMENT:dev}.pfx
-#    key-store-password: ${KEY_STORE_PASSWORD:123456}
-#    key-store-type: pkcs12
-#    key-password: ${KEY_STORE_PASSWORD:123456}
+  #  ssl:
+  #    key-store: classpath:${ENVIRONMENT:dev}.pfx
+  #    key-store-password: ${KEY_STORE_PASSWORD:123456}
+  #    key-store-type: pkcs12
+  #    key-password: ${KEY_STORE_PASSWORD:123456}
   servlet:
     context-path: /
   port: 8443
   error:
     whitelabel:
       enabled: false
+
+dotenv:
+  location: ../.env
 
 spring:
   zipkin:
@@ -27,8 +30,8 @@ spring:
       globalcors:
         add-to-simple-url-handler-mapping: true
         cors-configurations:
-          '[/**]':
-            allowed-origins: "${CLIENT_HOST:http://${HOST_IP_ADDRESS:localhost}:3000}"
+          "[/**]":
+            allowed-origins: "${CLIENT_HOST:http://localhost:3000}"
             allowed-headers: "*"
             exposed-headers: "*"
             allow-credentials: true
@@ -103,7 +106,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE:http://${HOST_IP_ADDRESS:localhost}:8761/eureka}
+      defaultZone: ${EUREKA_SERVER_URL:https://eureka.tonynyan.id.vn/eureka/}
   instance:
     prefer-ip-address: true
-    ip-address: ${HOST_IP_ADDRESS:localhost}
+    hostname: ${EUREKA_INSTANCE_HOSTNAME:localhost}
