--- a/blog-service/compose.yml
+++ b/blog-service/compose.yml
@@ -1,7 +1,7 @@
-version: '3'
+version: "3"
 services:
   blog-service-container:
-    image: tuyentvwork/blog-service:0.1.0
+    image: toandeptroai/blog-service:0.1.0
     ports:
       - 8081:8081
     environment:
