--- a/learning-path-service/compose.yml
+++ b/learning-path-service/compose.yml
@@ -1,7 +1,7 @@
-version: '3'
+version: "3"
 services:
   learning-path-service-container:
-    image: tuyentvwork/learning-path-service:0.1.0
+    image: toandeptroai/learning-path-service:0.1.0
     ports:
       - 8083:8083
     environment:
