--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -7,10 +7,19 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub}
-    username: ${SPRING_DATASOURCE_USERNAME:postgres}
-    password: ${SPRING_DATASOURCE_PASSWORD:123456}
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 20000
+      maximum-pool-size: 10
+      minimum-idle: 5
+      idle-timeout: 300000
+      max-lifetime: 1200000
+      auto-commit: true
+      pool-name: NotificationServiceHikariPool
+      leak-detection-threshold: 60000
   jpa:
     hibernate:
       ddl-auto: update
@@ -20,10 +29,10 @@ spring:
         dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
         format_sql: true
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:103.188.83.154:9092}
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     consumer:
-      group-id: ${KAFKA_CONSUMER_GROUP:notification-service-v3}
-      auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET:latest}
+      group-id: notification-service-v3
+      auto-offset-reset: ${KAFKA_AUTO_OFFSET_RESET}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -32,8 +41,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME:vancongtoan09102004@gmail.com}
-    password: ${MAIL_PASSWORD:mkeptlidrexbdwlm}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
@@ -48,10 +57,10 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE:http://${HOST_IP_ADDRESS:localhost}:8761/eureka}
+      defaultZone: ${EUREKA_SERVER_URL:https://eureka.tonynyan.id.vn/eureka/}
   instance:
     prefer-ip-address: true
-    hostname: ${HOST_IP_ADDRESS:localhost}
+    hostname: ${EUREKA_INSTANCE_HOSTNAME:localhost}
 
 resilience4j:
   circuitbreaker:
@@ -73,15 +82,15 @@ logging:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 kafka:
-  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:103.188.83.154:9092}
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
   topics:
-    email: ${KAFKA_EMAIL_TOPIC:email-notifications}
-    notification: ${KAFKA_NOTIFICATION_TOPIC:notification-commands}
+    email: ${KAFKA_EMAIL_TOPIC}
+    notification: ${KAFKA_NOTIFICATION_TOPIC}
   consumer:
-    group-id: ${KAFKA_CONSUMER_GROUP:notification-service-v3}
-    concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
-    ack-mode: ${KAFKA_CONSUMER_ACK_MODE:MANUAL_IMMEDIATE}
-    trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
+    group-id: notification-service-v3
+    concurrency: ${KAFKA_CONSUMER_CONCURRENCY}
+    ack-mode: ${KAFKA_CONSUMER_ACK_MODE}
+    trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES}
 
 management:
   endpoints:
