--- a/proxy-client/compose.yml
+++ b/proxy-client/compose.yml
@@ -1,7 +1,7 @@
-version: '3'
+version: "3"
 services:
   proxy-client-container:
-    image: tuyentvwork/proxy-client:0.1.0
+    image: toandeptroai/proxy-client:0.1.0
     ports:
       - 8085:8085
     environment:
