--- a/proxy-client/src/main/resources/application.yml
+++ b/proxy-client/src/main/resources/application.yml
@@ -3,11 +3,14 @@ server:
   servlet:
     context-path: /app
 
+dotenv:
+  location: ../.env
+
 spring:
   application:
     name: PROXY-CLIENT
   profiles:
-    active: local
+    active: ${SPRING_PROFILES_ACTIVE:dev}
   servlet:
     multipart:
       enabled: true
@@ -17,7 +20,7 @@ spring:
   cloud:
     loadbalancer:
       retry:
-        enabled: true  # Retry nếu no instance
+        enabled: true # Retry nếu no instance
       cache:
         enabled: true
         ttl: 10s
@@ -25,18 +28,18 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: ${EUREKA_SERVER_URL:https://eureka.tonynyan.id.vn/eureka/}
     fetch-registry: true
     register-with-eureka: true
   instance:
-    hostname: localhost
+    hostname: ${EUREKA_INSTANCE_HOSTNAME:localhost}
     prefer-ip-address: true
 
 # JWT Configuration
 jwt:
-  secret: mySecretKey123456789012345678901234567890
-  expiration: 86400000  # 24 hours
-  refresh-expiration: 604800000  # 7 days
+  secret: ${JWT_SECRET}
+  expiration: ${JWT_EXPIRATION}
+  refresh-expiration: ${JWT_REFRESH_EXPIRATION}
 
 # Logging configuration
 logging:
