--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,6 +62,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-m2-
 
+      - name: Build common-service (shared library)
+        working-directory: ./common-service
+        run: |
+          chmod +x mvnw
+          ./mvnw -B -DskipTests clean install
+
       - name: Build ${{ matrix.service.name }}
         working-directory: ${{ matrix.service.context }}
         run: |
