--- a/payment-service/src/main/resources/application-dev.yml
+++ b/payment-service/src/main/resources/application-dev.yml
@@ -13,6 +13,15 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 
+# VNPay Configuration - Set directly as properties
+VNPAY_TMN_CODE: 0AAX2AOF
+VNPAY_HASH_SECRET: R9NG5FT0OJ944TRXM0UX6LH77TT538B7
+VNPAY_PAYMENT_URL: https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL: http://localhost:3000/vnpay-return
+VNPAY_VERSION: 2.1.0
+VNPAY_COMMAND: pay
+VNPAY_ORDER_TYPE: other
+
 logging:
   level:
     com.techhub.app.paymentservice: DEBUG
