--- a/learning-path-service/src/main/resources/application.yml
+++ b/learning-path-service/src/main/resources/application.yml
@@ -8,6 +8,21 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   zipkin:
     base-url: ${SPRING_ZIPKIN_BASE_URL:http://${HOST_IP_ADDRESS:localhost}:9411/}
+  datasource:
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub_db}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:postgres}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
+        format_sql: true
+        jdbc:
+          time_zone: UTC
 
 eureka:
   client:
