--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -43,3 +43,8 @@ paypal:
   client-id: AaJznEpFe4e6d9IvlvAow5_hNb_LXF5Ux7ErjZuNlr4QRmyxMvxUlC6rBjxbUwOxAK5Ohpaodi7xY4dz
   client-secret: EGtQvi4lftVEkMeDZP6Y-QiubFGstclyTGRTmE9zzxYNNKbCgF21ttfyC68C_-FNFsFpOgLuvzamuXWH
   api-base: https://api-m.sandbox.paypal.com
+  return-url: http://localhost:8443/app/api/proxy/payments/paypal/success
+  cancel-url: http://localhost:8443/app/api/proxy/payments/paypal/cancel
+
+payment:
+  frontend-result-url: http://localhost:3000/result
