--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -22,6 +22,12 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Eureka client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
