--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -67,6 +67,10 @@ spring:
           uri: lb://FILE-SERVICE
           predicates:
             - Path=/file-service/**
+        - id: AI-SERVICE
+          uri: lb://AI-SERVICE
+          predicates:
+            - Path=/ai-service/**
         # Expose OAuth2 endpoints of USER-SERVICE directly at gateway root
         - id: USER-SERVICE-OAUTH2
           uri: lb://USER-SERVICE
