--- a/learning-path-service/pom.xml
+++ b/learning-path-service/pom.xml
@@ -53,7 +53,7 @@
 	<dependency>
 		<groupId>org.postgresql</groupId>
 		<artifactId>postgresql</artifactId>
-		<scope>runtime</scope>
+		<version>42.7.3</version>
 	</dependency>
 
 	<dependency>
